k8s/n8n-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n-worker
  name: n8n-worker
  namespace: n8n
spec:
  replicas: 2
  selector:
    matchLabels:
      service: n8n-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n-worker
    spec:
      containers:
        - name: n8n-worker
          image: n8nio/n8n
          command: ["n8n", "worker"]
          resources:
            requests:
              memory: "250Mi"
              cpu: "100m"
            limits:
              memory: "500Mi"
              cpu: "500m"
      restartPolicy: Always
