k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: redis
  name: redis-service
  namespace: n8n
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    service: redis
